--- a/package.json
+++ b/package.json
@@ -11,15 +11,20 @@
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-dropzone": "^4.2.11",
     "react-google-maps": "^9.4.5",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "1.1.4",
     "react-share": "^2.1.1",
+    "react-webcam": "^0.5.0",
     "recompose": "^0.27.1",
     "redux": "^4.0.0",
     "redux-immutable": "^4.0.0",
+    "redux-observable": "^1.0.0-beta.2",
+    "rxjs": "^6.2.1",
+    "rxjs-compat": "^6.2.1",
     "semantic-ui-react": "^0.80.0",
     "sqip": "^0.3.3",
     "type-detect": "^4.0.8"
